# LettuceCache

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  demo.sh  dev.sh  docker-compose.yml  mkdocs.yml
.github/workflows/: docs-requirements.txt  docs.yml
docs/: index.html  index.md
docs/api/: endpoints.md
docs/assets/: extra.css  mermaid-init.js
docs/deployment/: docker.md  kubernetes.md
docs/development/: building.md  contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/how-it-works/: admission-control.md  async-write-path.md  context-signatures.md  overview.md  validation.md
k8s/: configmap.yaml  orchestrator-deployment.yaml  orchestrator-service.yaml  python-sidecar-deployment.yaml  python-sidecar-service.yaml
python_sidecar/: Dockerfile  main.py  requirements.txt
src/: main.cpp
src/api/: HttpServer.cpp  HttpServer.h
src/builder/: AdmissionController.cpp  AdmissionController.h  CacheBuilderWorker.cpp  CacheBuilderWorker.h  IntelligentAdmissionPolicy.cpp  IntelligentAdmissionPolicy.h  ResponseQualityFilter.cpp  ResponseQualityFilter.h  Templatizer.cpp  Templatizer.h
src/cache/: FaissVectorStore.cpp  FaissVectorStore.h  IVectorStore.h  RedisCacheAdapter.cpp  RedisCacheAdapter.h
src/embedding/: EmbeddingClient.cpp  EmbeddingClient.h
src/llm/: LLMAdapter.h  OpenAIAdapter.cpp  OpenAIAdapter.h
src/orchestrator/: ContextBuilder.cpp  ContextBuilder.h  ContextSignature.cpp  ContextSignature.h  QueryOrchestrator.cpp  QueryOrchestrator.h
src/quantization/: TurboQuantizer.cpp  TurboQuantizer.h
src/validation/: ValidationService.cpp  ValidationService.h
tests/: happy_path.sh  live_demo.sh
tests/integration/: CMakeLists.txt  test_cache_flow.cpp
tests/unit/: CMakeLists.txt  test_admission_controller.cpp  test_context_signature.cpp  test_templatizer.cpp  test_turboquant.cpp  test_validation.cpp
